--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,11 +5,31 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+
+.background {
+  background-image: image-set(
+    url("/hero/phone1x.webp") 1x,
+    url("/hero/phone2x.webp") 2x
+  );
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
     padding: 0 32px;
+  }
+
+  .background {
+    background-image: image-set(
+      url("/hero/tab1x.webp") 1x,
+      url("/hero/tab2x.webp") 2x
+    );
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
 /* Styles for Desktop devices */
@@ -17,5 +37,15 @@
   .container {
     max-width: 1440px;
     padding: 0 64px;
+  }
+
+  .background {
+    background-image: image-set(
+      url("/hero/desk1x.webp") 1x,
+      url("/hero/desk2x.webp") 2x
+    );
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
