--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,41 @@
 /* треба змінити згідно макету */
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f7f9ff;
+  --foreground: #000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #9c9c9c;
+    --foreground: #fff;
   }
 }
 
 html,
 body {
+  font-family: var(--font-family-nunito), sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
+}
+
+h1,
+h2 {
+  font-family: var(--font-family-sora);
+  font-weight: 700;
+  letter-spacing: -0.01em;
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 28px;
 }
 
 body {
