--- a/app/globals.css
+++ b/app/globals.css
@@ -21,11 +21,17 @@ body {
   max-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
 }
 
 h1,
 h2 {
-  font-family: var(--font-family-sora);
+  font-family: var(--font-family-sora), sans-serif;
   font-weight: 700;
   letter-spacing: -0.01em;
 }
@@ -37,10 +43,25 @@ h1 {
 h2 {
   font-size: 28px;
 }
+/* базові скидання */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
+p:last-child {
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 * {
@@ -52,10 +73,48 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+/* Styles for Tablet devices */
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  body {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1440px) {
+  h1 {
+    font-size: 56px;
+  }
+
+  h2 {
+    font-size: 48px;
+  }
+
+  body {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.5;
   }
 }
