--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -5,15 +5,15 @@
   padding: 0 20px;
 }
 
-.background {
+/* .background {
   background-image: image-set(
     url("/hero/phone1x.webp") 1x,
     url("/hero/phone2x.webp") 2x
-  );
-  background-size: cover;
+  ); */
+/* background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-}
+  background-repeat: no-repeat; 
+}*/
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
@@ -22,15 +22,15 @@
     padding: 0 32px;
   }
 
-  .background {
+  /* .background {
     background-image: image-set(
       url("/hero/tab1x.webp") 1x,
       url("/hero/tab2x.webp") 2x
-    );
-    /* background-size: cover;
+    ); */
+  /* background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; */
-  }
+    background-repeat: no-repeat; 
+  }*/
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
@@ -39,13 +39,13 @@
     padding: 0 64px;
   }
 
-  .background {
+  /* .background {
     background-image: image-set(
       url("/hero/desk1x.webp") 1x,
       url("/hero/desk2x.webp") 2x
     );
-    /* background-size: cover;
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; */
-  }
+    background-repeat: no-repeat; 
+  } */
 }
