--- a/components/LoginForm/LoginForm.module.css
+++ b/components/LoginForm/LoginForm.module.css
@@ -1,15 +1,12 @@
-.container {
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .mainContent {
   flex: 1;
   margin: 0;
-  padding: 64px 0px;
+  padding-top: 64px;
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 173px;  
 width: 335px;
+background-color: #fff;
 }
 
 .wrapper{
@@ -28,7 +25,7 @@ width: 335px;
 }
 
 .wrapperItemBorder{
-border-bottom: 1px solid #9ca3af;
+border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .formTitle {
@@ -59,32 +56,47 @@ margin-bottom: 32px;
 
 .input {
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 12px;
-  padding: 10px 12px;
-  font-size: 14px;
+  border-radius: 8px;
+  padding: 8px;
+  font-size: 16px;
   background-color: transparent; 
   color: #000;
-  transition: border-color 0.2s ease, background-color 0.2s ease;
+  transition: border-color 0.2s ease, color 0.2s ease;
 }
 
 .input::placeholder {
   color: rgba(0, 0, 0, 0.6);
 }
 
+.input:hover {
+  border-color: #4169e1;
+  color: #000;
+}
+
 .input:focus,
 .input:active {
-  border-color: #4169e1;
-  background-color: transparent; 
-  outline: none;
+  border-color: #4169e1; 
+    color: #000;
+outline: none;
 }
 
 .input:not(:placeholder-shown) {
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: transparent; 
+  color: #000;
 }
 
 .inputError {
-  border-color: #b00101;
+ border-color: #b00101;
+ color: #b00101;
+} 
+
+/* Заборона браузеру підсвічувати автозаповнення */
+.input:-webkit-autofill,
+.input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: #000 !important;
+  background-color: transparent !important;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .submitButton {
@@ -95,21 +107,19 @@ width: 100%;
 height: 44px;
 color: #ffff;
 font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
 background-color: #4169e1;
   cursor: pointer;
-  transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease, color 0.2s ease;
 }
-
+.submitButton:focus,
 .submitButton:hover {
-border: 1px solid #4169e1;
-border-radius: 8px;
   background-color: #e8eeff;
   color: #000;
 }
 
 .submitButton:active {
-border: 1px solid #4169e1;
-border-radius: 8px;
   background-color: #7a96ea;
   color: #000;
 }
@@ -128,38 +138,38 @@ border-radius: 8px;
   text-align: start;
 }
 
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 32px;
+@media (min-width: 320px) and (max-width: 374px) {
+  .mainContent {
+    width: 100%;
   }
+}
 
+@media (min-width: 375px) and (max-width: 767px) {
+  .mainContent {
+    width: 335px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
 .mainContent {
+  padding-top: 64px;
   padding-right: 30px;
   padding-left: 30px;
+  padding-bottom: 242px; 
 width: 704px;
 }
 
 .formTitle{
   font-size: 44px;
 }
-
-.input {
-  border-radius: 8px;
-  padding: 8px;
-  font-size: 16px;
-}
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-    padding: 0 64px;
-  }
-
 .mainContent {
-  padding-left: 30px;
-  padding-right:30px;
+  padding-top: 64px;
+  padding-left: 334px;
+  padding-right:334px;  
+  padding-bottom: 213px;  
   width: 1312px;}
 
 .wrapperItem{
@@ -171,5 +181,13 @@ width: 704px;
 
 .formText{
   font-size: 20px;
+}
+
+.input{
+  font-size: 18px;
+}
+
+.submitButton{
+  font-size: 18px;
 }
 }
