--- a/components/LoginForm/LoginForm.module.css
+++ b/components/LoginForm/LoginForm.module.css
@@ -19,12 +19,18 @@ background-color: #fff;
 
 .wrapperItem{
   flex: 1;
-  border: 1px solid transparent; 
+  border-bottom: 1px solid transparent; 
   text-align: center;
   padding: 12px 24px;
+    transition: border-color 0.2s ease;
 }
 
-.wrapperItemBorder{
+.wrapperItem a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.active {
 border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
