--- a/components/TravellerInfoCard/TravellerInfoCard.module.css
+++ b/components/TravellerInfoCard/TravellerInfoCard.module.css
@@ -8,6 +8,7 @@
   width: 100%;
   min-width: 250px;
   max-width: 335px;
+  gap: 24px;
   /* transition:
     transform 0.2s ease,
     box-shadow 0.2s ease; */
@@ -23,7 +24,6 @@
   height: 112px;
   overflow: hidden;
   border-radius: 100%;
-  margin-bottom: 24px;
 }
 
 .avatar {
@@ -48,33 +48,47 @@
 }
 
 .description {
-  font-size: 16px;
-  font-weight: 400;
   color: #000;
-  line-height: 150%;
-  /* margin: 0 0 12px 0; */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .profileButton {
   display: inline-block;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.15);
   color: #000;
   font-size: 16px;
   font-weight: 500;
   padding: 12px 60px;
   border-radius: 8px;
   text-decoration: none;
-  /* transition: background-color 0.2s ease; */
+  white-space: nowrap;
+  max-width: 100%;
+  box-sizing: border-box;
+  transition:
+    background-color 0.2s ease,
+    border-color 0.2s ease;
 }
 
-/* .profileButton:hover {
-  background-color: #0059c9;
-} */
+.profileButton:hover {
+  background-color: rgba(0, 0, 0, 0.1); /* темнее серый */
+  border-color: rgba(0, 0, 0, 0.2);
+}
 
 /* планшет*/
 @media (min-width: 768px) {
   .card {
     max-width: 340px;
+  }
+
+  .content {
+    width: 292px;
+    height: 179px;
   }
 
   .profileButton {
@@ -89,7 +103,7 @@
   }
 
   .content {
-    width: 232px;
+    width: 262px;
     height: 200px;
   }
 
@@ -100,15 +114,11 @@
 
   .description {
     font-size: 18px;
-    font-weight: 400;
   }
 
   .profileButton {
     font-size: 18px;
     font-weight: 500;
     padding: 10px 37px;
-    border-radius: 8px;
-    text-decoration: none;
-    /* transition: background-color 0.2s ease; */
   }
 }
