--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,10 +10,22 @@
   background-image: image-set(
     url("/hero/phone1x.webp") 1x,
     url("/hero/phone2x.webp") 2x
+   );
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.joinBackground {
+  background-image: image-set(
+    url("/join/phone1x.webp") 1x,
+    url("/join/phone2x.webp") 2x
   );
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+   border-radius: 32px;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
@@ -32,6 +44,14 @@
     background-repeat: no-repeat;
   }
 }
+
+  .joinBackground {
+    background-image: image-set(
+      url("/join/tab1x.webp") 1x,
+      url("/join/tab2x.webp") 2x
+    );
+  }
+
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
   .container {
@@ -48,4 +68,13 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+
+    .joinBackground {
+    background-image: image-set(
+      url("/join/desk1x.webp") 1x,
+      url("/join/desk2x.webp") 2x
+    );
+  }
+
 }
+
