--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,26 +7,15 @@
 }
 
 .background {
-  background-image: image-set(
-    url("/hero/phone1x.webp") 1x,
-    url("/hero/phone2x.webp") 2x
-   );
+  background-image: image-set(url("/hero/phone1x.webp") 1x,
+      url("/hero/phone2x.webp") 2x);
 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.joinBackground {
-  background-image: image-set(
-    url("/join/phone1x.webp") 1x,
-    url("/join/phone2x.webp") 2x
-  );
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-   border-radius: 32px;
-}
+
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
@@ -35,22 +24,14 @@
   }
 
   .background {
-    background-image: image-set(
-      url("/hero/tab1x.webp") 1x,
-      url("/hero/tab2x.webp") 2x
-    );
+    background-image: image-set(url("/hero/tab1x.webp") 1x,
+        url("/hero/tab2x.webp") 2x);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
 }
 
-  .joinBackground {
-    background-image: image-set(
-      url("/join/tab1x.webp") 1x,
-      url("/join/tab2x.webp") 2x
-    );
-  }
 
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
@@ -60,21 +41,10 @@
   }
 
   .background {
-    background-image: image-set(
-      url("/hero/desk1x.webp") 1x,
-      url("/hero/desk2x.webp") 2x
-    );
+    background-image: image-set(url("/hero/desk1x.webp") 1x,
+        url("/hero/desk2x.webp") 2x);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
-
-    .joinBackground {
-    background-image: image-set(
-      url("/join/desk1x.webp") 1x,
-      url("/join/desk2x.webp") 2x
-    );
-  }
-
 }
-
