--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -1,6 +1,7 @@
 .container {
   min-width: 320px;
   max-width: 375px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -19,6 +20,7 @@
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    width: 768px;
     padding: 0 32px;
   }
 
@@ -36,6 +38,7 @@
 @media only screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
+    width: 1440px;
     padding: 0 64px;
   }
 
