--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,4 +1,4 @@
-.about {
+/* .about {
   padding-top: 64px;
   padding-bottom: 64px;
   max-width: 375px;
@@ -120,66 +120,72 @@
   .list_text {
     font-size: 18px;
   }
-}
-/*
+} */
 
 .about_header {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-direction: row;
+  flex-direction: column;
   gap: 24px;
   margin-bottom: 64px;
 }
 
 .title {
-  max-width: 755px;
-  font-weight: 700;
-  font-size: 52px;
   line-height: 1.2;
-  letter-spacing: -0.01em;
-  color: #fff;
-  font-family: "Sora", sans-serif;
-}
-
-.text {
-  max-width: 533px;
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 1.5;
-  color: #fff;
 }
 
 .list {
   display: flex;
-  flex-direction: row;
-  gap: 48px;
+  flex-direction: column;
+  gap: 32px;
   list-style: none;
 }
 
-.list_item {
-}
-
 .about_svg {
-  color: #fff;
   fill: #fff;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
 }
 
 .list_title {
+  font-family: var(--font-family-sora);
   font-weight: 700;
-  font-size: 32px;
+  font-size: 20px;
   line-height: 1.3;
   letter-spacing: -0.01em;
-  color: #fff;
-  margin-bottom: 24px;
+  margin-bottom: 8px;
 }
 
-.list_text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #fff;
-  font-family: "Nunito Sans", sans-serif;
-} */
+@media only screen and (min-width: 768px) {
+  .about_header {
+    flex-direction: row;
+  }
+
+  .list {
+    flex-direction: row;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .about_header {
+    margin-bottom: 64px;
+  }
+
+  .title {
+    max-width: 755px;
+    font-size: 52px;
+  }
+
+  .text {
+    max-width: 533px;
+  }
+
+  .about_svg {
+    margin-bottom: 24px;
+  }
+
+  .list_title {
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+}
