--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,9 +1,3 @@
-/* .about {
-  padding-top: 64px;
-  padding-bottom: 64px;
-  max-width: 375px;
-}
-
 .about_header {
   display: flex;
   align-items: flex-start;
@@ -14,20 +8,7 @@
 }
 
 .title {
-  font-weight: 700;
-  font-size: 28px;
   line-height: 1.2;
-  letter-spacing: -0.01em;
-  color: #000;
-  font-family: "Sora", sans-serif;
-}
-
-.text {
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #000;
 }
 
 .list {
@@ -37,42 +18,25 @@
   list-style: none;
 }
 
-.list_item {
-}
-
 .about_svg {
+  fill: var(--foreground);
   margin-bottom: 8px;
+  /* width: 48px;
+  height: 48px; */
 }
 
 .list_title {
-  font-family: "Sora", sans-serif;
+  font-family: var(--font-family-sora), sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: -0.01em;
-  color: #000;
   margin-bottom: 8px;
 }
 
-.list_text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #000;
-  font-family: "Nunito Sans", sans-serif;
-}
-
 @media only screen and (min-width: 768px) {
-  .about {
-    max-width: 768px;
-  }
-
   .about_header {
     flex-direction: row;
-  }
-
-  .title {
-    font-size: 44px;
   }
 
   .text {
@@ -85,12 +49,6 @@
 }
 
 @media only screen and (min-width: 1440px) {
-  .about {
-    padding-top: 72px;
-    padding-bottom: 72px;
-    max-width: 1440px;
-  }
-
   .about_header {
     margin-bottom: 64px;
   }
@@ -101,7 +59,6 @@
   }
 
   .text {
-    font-size: 20px;
     max-width: 533px;
   }
 
@@ -117,75 +74,8 @@
     font-size: 32px;
     margin-bottom: 24px;
   }
+
   .list_text {
     font-size: 18px;
-  }
-} */
-
-.about_header {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  gap: 24px;
-  margin-bottom: 64px;
-}
-
-.title {
-  line-height: 1.2;
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  list-style: none;
-}
-
-.about_svg {
-  fill: #fff;
-  margin-bottom: 8px;
-}
-
-.list_title {
-  font-family: var(--font-family-sora);
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.3;
-  letter-spacing: -0.01em;
-  margin-bottom: 8px;
-}
-
-@media only screen and (min-width: 768px) {
-  .about_header {
-    flex-direction: row;
-  }
-
-  .list {
-    flex-direction: row;
-  }
-}
-
-@media only screen and (min-width: 1440px) {
-  .about_header {
-    margin-bottom: 64px;
-  }
-
-  .title {
-    max-width: 755px;
-    font-size: 52px;
-  }
-
-  .text {
-    max-width: 533px;
-  }
-
-  .about_svg {
-    margin-bottom: 24px;
-  }
-
-  .list_title {
-    font-size: 32px;
-    margin-bottom: 24px;
   }
 }
