--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -15,11 +15,11 @@
 }
 
 .logo_span {
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 17px;
     line-height: 1.1;
     letter-spacing: -0.01em;
-        color: #000;
+    color: var(--foreground);
 }
 
 .footer_socialmedia_list {
@@ -39,11 +39,13 @@
 }
 
 .footer_privacy_policy {
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 12px;
-    line-height: 1.5;
-    color: #000;
+    /* line-height: 1.5; */
+    color: var(--foreground);
     text-align: center;
+
+    margin-top: 32px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -62,6 +64,7 @@
 
     .footer_socialmedia_list {
         margin-bottom: 0px;
+        gap: 12px;
     }
     
     .footer_socialmedia_icon {
@@ -70,14 +73,41 @@
     }
 
     .footer_privacy_policy {
-        margin-top: 32px;
+        margin-top: 56px;
 
     }
-
-
-
-
-
-
-
 }
+
+@media only screen and (min-width: 1440px) {
+
+    .footer_box {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        position: relative;
+        /* gap: 390px; */
+    }
+
+    .footer_content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 438px;
+        margin-bottom: 0;
+    }
+
+    .footer_box::after {
+        position: absolute;
+        content: '';
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        width: 100%;
+        height: 0px;
+        top: 48px;
+    }
+
+    .footer_privacy_policy {
+        font-size: 16px;
+    }
+}
+
+
