--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -44,6 +44,7 @@
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+    transition: all 0.3s ease;
   }
 
   .paginationBtn:hover,
@@ -56,12 +57,12 @@
   .paginationBtn:active {
     border: 1px solid #4169e1;
     background-color: #7a96ea;
-    color: #000;
+    color: #fff;
   }
 }
 
 /* десктоп */
-@media (min-width: 1024px) {
+@media (min-width: 1440px) {
   .cardsWrapper > * {
     flex: 1 1 calc(25% - 24px);
     max-width: 310px;
