--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -7,6 +7,10 @@
 }
 
 .cardsWrapper {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,9 +18,10 @@
   /* width: 100%; */
 }
 
-.cardsWrapper > * {
+.cardItem {
   flex: 1 1 100%;
   max-width: 335px;
+  display: flex;
 }
 
 .pagination {
