--- a/components/Join/Join.module.css
+++ b/components/Join/Join.module.css
@@ -36,7 +36,7 @@
     justify-content: center;
     align-items: center;
 
-    max-width: 295px;
+    width: 100%;
 
     border-radius: 8px;
     padding: 12px 83px;
