--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -11,17 +11,19 @@
   padding: 0;
   margin: 0;
 
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 24px;
-  /* width: 100%; */
+  max-width: 100%;
 }
 
 .cardItem {
   flex: 1 1 100%;
-  max-width: 335px;
+  max-width: 100%;
   display: flex;
+  justify-content: center;
 }
 
 .pagination {
@@ -48,7 +50,6 @@
     color: #fff;
     font-size: 16px;
     font-weight: 500;
-    cursor: pointer;
     transition: all 0.3s ease;
   }
 
