--- a/components/TravellersList/TravellersList.module.css
+++ b/components/TravellersList/TravellersList.module.css
@@ -26,8 +26,34 @@
   justify-content: center;
 }
 
-.pagination {
-  display: none;
+.buttonWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.viewAllButton {
+  padding: 12px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4169e1;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  transition: all 0.3s ease;
+}
+
+.viewAllButton:hover,
+.viewAllButton:focus {
+  border: 1px solid #4169e1;
+  background-color: #e8eeff;
+  color: #000;
+}
+
+.viewAllButton:active {
+  border: 1px solid #4169e1;
+  background-color: #7a96ea;
+  color: #fff;
 }
 
 /* планшет */
@@ -35,35 +61,6 @@
   .cardsWrapper > * {
     flex: 1 1 calc(50% - 24px);
     max-width: 340px;
-  }
-
-  .pagination {
-    display: flex;
-    justify-content: center;
-  }
-
-  .paginationBtn {
-    padding: 12px;
-    border: none;
-    border-radius: 8px;
-    background-color: #4169e1;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 500;
-    transition: all 0.3s ease;
-  }
-
-  .paginationBtn:hover,
-  .paginationBtn:focus {
-    border: 1px solid #4169e1;
-    background-color: #e8eeff;
-    color: #000;
-  }
-
-  .paginationBtn:active {
-    border: 1px solid #4169e1;
-    background-color: #7a96ea;
-    color: #fff;
   }
 }
 
@@ -74,7 +71,7 @@
     max-width: 310px;
   }
 
-  .paginationBtn {
+  .viewAllButton {
     padding: 10px 12px;
     font-size: 18px;
     font-weight: 500;
