--- a/app/(public routes)/travellers/travellers.module.css
+++ b/app/(public routes)/travellers/travellers.module.css
@@ -12,7 +12,6 @@
 }
 
 .title {
-/* color: #000; */
 font-size: 32px;
 line-height: 1.1;
 text-align: center;
@@ -21,6 +20,40 @@ margin-bottom: 24px;
 
 .page{
     padding: 32px 20px 64px;
+}
+
+.loadMoreButton {
+    padding: 6px 12px;
+    border: 1px solid #4169e1;
+    border-radius: 8px;
+    background-color: #4169e1;
+    width: 100%;
+    height: 48px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    cursor: pointer;
+    margin-top: 24px;
+    transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.loadMoreButton:hover,
+.loadMoreButton:focus{
+  background-color: #e8eeff;
+  color: #000;
+}
+
+.loadMoreButton:active{
+    background-color: #7a96ea;
+    color: #000;
+}
+
+.loadMoreButton:disabled {
+  opacity: 0.3;
+  background-color: #4169e1;
+  color: #ffff;
+  cursor: not-allowed;
 }
 
 @media only screen and (min-width: 768px) {
@@ -32,6 +65,11 @@ padding: 32px 32px 64px;
 .title{
 font-size: 48px;
 }
+.loadMoreButton{
+  width: 135px;       
+  display: block;     
+  margin: 24px auto 0;    
+}
 }
 
 @media only screen and (min-width: 1440px) {
@@ -42,5 +80,9 @@ padding: 48px 64px 72px;
 
 .title{
 font-size: 56px;
+}
+
+.loadMoreButton{
+  font-size: 18px;
 }
 }
