--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,9 +3,10 @@ body {
 }
 
 .homeContainer {
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 16px 20px;
+  /* min-width: 320px; */
+  /* margin: 0 auto; */
+  padding-top: 16px;
+  padding-bottom: 16px;
 
   background: transparent;
   position: fixed;
@@ -17,6 +18,7 @@ body {
 }
 
 .header_container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,7 +33,7 @@ body {
 }
 
 .homeLogoText {
-  font-family: var(--second-family);
+  /* font-family: var(--second-family); */
   font-size: 17px;
   line-height: 1.1;
   letter-spacing: -0.01em;
@@ -39,14 +41,14 @@ body {
 }
 
 .defaultLogoText {
-  font-family: var(--second-family);
+  /* font-family: var(--second-family); */
   font-size: 17px;
   line-height: 1.1;
   letter-spacing: -0.01em;
   color: #000;
 }
 
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
   .homeContainer {
     padding: 16px 32px;
   }
@@ -57,4 +59,4 @@ body {
     max-width: 1440px;
     padding: 16px 64px;
   }
-}
+} */
