add container styles

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -2,7 +2,8 @@ body {
   scroll-padding-top: 64px;
 }
 
-.homeContainer {
+.homeContainer,
+.defaultContainer {
   /* min-width: 320px; */
   /* margin: 0 auto; */
   padding-top: 16px;
