--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -2,8 +2,7 @@ body {
   scroll-padding-top: 64px;
 }
 
-.homeContainer,
-.defaultContainer {
+.homeContainer {
   /* min-width: 320px; */
   /* margin: 0 auto; */
   padding-top: 16px;
@@ -11,6 +10,23 @@ body {
 
   background: transparent;
   position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  z-index: 10;
+}
+
+.homeContainer.scrolled {
+  background-color: rgba(10, 12, 20, 0.5);
+  backdrop-filter: blur(12px);
+}
+
+.defaultContainer {
+  padding-top: 16px;
+  padding-bottom: 16px;
+
+  position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
