--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,18 @@
 :root {
   --background: #f7f9ff;
   --foreground: #000;
+  --color-royal-blue-lighter: #e8eeff;
+  --opacity-neutral-darkest-15: rgba(0, 0, 0, 0.15);
+  --color-scheme-1-border: var(--opacity-neutral-darkest-15);
+  --color-scheme-2-foreground: var(--color-royal-blue-lighter);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #9c9c9c;
     --foreground: #fff;
   }
-}
+} */
 
 html,
 body {
@@ -79,11 +83,11 @@ button {
   cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
