--- a/components/Pagination/Pagination.module.css
+++ b/components/Pagination/Pagination.module.css
@@ -1,5 +1,5 @@
 .btnLoadMore {
-  width: 156px;
+  width: 100%;
   height: 48px;
   padding: 12px;
   border: 1px solid var(--color-royal-blue);
@@ -17,6 +17,16 @@
   border: 1px solid #4169e1;
   background-color: #e8eeff;
   color: #000;
+}
+
+/* Styles for Desktop devices */
+@media only screen and (min-width: 768px) {
+  .btnLoadMore {
+    width: 156px;
+    font-size: 18px;
+    margin: 0 auto;
+    display: block;
+  }
 }
 
 /* Styles for Desktop devices */
