--- a/components/TravellerById/TravellerById.module.css
+++ b/components/TravellerById/TravellerById.module.css
@@ -1,14 +1,14 @@
 .title {
   margin-bottom: 24px;
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 28px;
+  font-weight: 700;
   line-height: 1.2;
 }
 
 @media (min-width: 768px) {
   .title {
     margin-bottom: 32px;
-    font-size: 32px;
+    font-size: 44px;
   }
 }
 
@@ -16,6 +16,10 @@
   .title {
     margin-bottom: 40px;
     font-size: 36px;
+  }
+  .title {
+    margin-bottom: 32px;
+    font-size: 52px;
   }
 }
 
